# datathon-esp-2026-bamis

./: .gitignore  ARCHITECTURE.md  DASHBOARD_POWERBI_DESIGN.md  GUIDE_SLIDES_PPT.md  GUIDE_SOUTENANCE.md  NOTE_METHODOLOGIQUE.md  QUESTIONS_JURY_POTENTIELLES.md  README.md  RESUME_EQUIPE_PREPARATION_DONNEES.md  SCRIPT_ORAL_6MIN.md  pyproject.toml  requirements.txt
configs/: config.yaml  feature_config.yaml  model_config.yaml  schema_map.yaml
configs/thresholds/: README_SEUILS.md  seuils_services.csv
docs/: CNAME  index.html
models/: catboost_v1.cbm
outputs/dashboard_exports/: dashboard.html
outputs/reports/: leakage_check_report.json  schema_audit_report.json  training_metrics.json  validation_report.json
scripts/: 01_audit_schema.py  02_build_dataset.py  03_build_features.py  04_build_graph_features.py  05_train_model.py  06_predict_fraud.py  07_compute_budget.py  08_score_customers.py  09_generate_submission.py  bonus_recommend_thresholds.py  run_all.py
src/bamis_fraud/budget/: alert_engine.py  budget_engine.py  threshold_recommender.py
src/bamis_fraud/dashboard/: api.py  app.py  export_data.py  template.html
src/bamis_fraud/feature_engineering/: behavioral_features.py  channel_features.py  feature_store.py  network_features.py  temporal_features.py  threshold_features.py  velocity_features.py
src/bamis_fraud/graph/: graph_builder.py  graph_features.py  mule_detection.py  pattern_detection.py
src/bamis_fraud/modeling/: train.py  (+5 more)
tests/: test_budget_engine.py  test_graph_detection.py  test_leakage_checks.py  test_loader.py  test_threshold_features.py
(+18 files in other folders)
