[project]
name = "bamis-fraud"
version = "0.1.0"
description = "Detection de fraude, gestion des seuils et classement client - Datathon BAMIS ESP 2026"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
